added notes in layout.css

--- a/css/layout-exercise.css
+++ b/css/layout-exercise.css
@@ -19,6 +19,7 @@ header.container {
     min-height: 80px;
     background-color: #fff;
     box-shadow: 3px -4px 15px -4px #000;
+    position: relative;
 }
 
 ul.d-flex {
