added a JQuery html and js

--- a/css/resets.css
+++ b/css/resets.css
@@ -4,6 +4,7 @@
 
 body {
     margin: unset;
+    -webkit-font-smoothing: antialiased;
 }
 
 img {
@@ -12,4 +13,14 @@ img {
 
 button {
     cursor: pointer;
+}
+
+a {
+    color: inherit;
+    text-decoration: unset;
+}
+
+ul{
+    list-style: none;
+    padding-left: 0;
 }
