made changes to jquery_faq.js and jquery_faq.html

--- a/css/jquery_faq.css
+++ b/css/jquery_faq.css
@@ -1,3 +1,19 @@
 .invisible {
     visibility: hidden;
 }
+
+.parks-header {
+    text-align: center;
+}
+
+.yellow-background {
+    background-color: yellow;
+}
+
+.bold {
+    font-weight: bold;
+}
+
+.color-blue {
+    color: blue;
+}
