--- a/css/jquery_faq.css
+++ b/css/jquery_faq.css
@@ -17,3 +17,39 @@
 .color-blue {
     color: blue;
 }
+
+.box-wrapper {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+}
+
+#box1 {
+    box-shadow: black 5px 5px 5px 5px;
+
+}
+
+#box2 {
+    box-shadow: black 5px 5px 5px 5px;
+}
+
+#box3 {
+    box-shadow: black 5px 5px 5px 5px;
+}
+
+img {
+    width: 100%;
+    height: 100%;
+}
+
+.btn-3 {
+    margin-top: 10px;
+}
+
+.btn-4 {
+    margin-top: 10px;
+}
+
+.btn-5 {
+    margin-top: 10px;
+}
