fixed the search bar to show city in the corner

--- a/css/weather_map.css
+++ b/css/weather_map.css
@@ -1,5 +1,8 @@
 body {
-    background-color: lightgray;
+    background-image: url("../img/weather2.gif");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
 }
 
 /*HEADER*/
