made changes to the movie-project html and js

--- a/css/order-pizza.css
+++ b/css/order-pizza.css
@@ -3,6 +3,8 @@
     background-image: url("../img/papajohns.webp");
     background-position: center center;
     background-size: cover;
+    background-repeat: no-repeat;
+
 }
 
 li span {
